# StagScribe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
licenses/: FONTS.md
samples/abstract_patterns/: 01_concentric_circles.stag  01_concentric_circles.txt  02_checkerboard.stag  02_checkerboard.txt  03_gradient_bars.stag  03_gradient_bars.txt  04_geometric.stag  04_geometric.txt
samples/cartoon_characters/: 01_smiley_face.stag  01_smiley_face.txt  02_robot.stag  02_robot.txt  03_cat_face.stag  03_cat_face.txt  04_tree_character.stag  04_tree_character.txt
samples/diagrams/: 01_flowchart.stag  01_flowchart.txt  02_org_chart.stag  02_org_chart.txt  03_timeline.stag  03_timeline.txt  04_pie_chart.stag  04_pie_chart.txt  05_network_diagram.stag  05_network_diagram.txt
samples/floor_plans/: 01_studio_apartment.stag  01_studio_apartment.txt  02_two_bedroom.stag  02_two_bedroom.txt  03_office_layout.stag  03_office_layout.txt  04_restaurant.stag  04_restaurant.txt  05_classroom.stag  05_classroom.txt  06_room_from_top.stag  06_room_from_top.txt
samples/icons/: 01_house.stag  01_house.txt  02_heart.stag  02_heart.txt  03_star.stag  03_star.txt  04_envelope.stag  04_envelope.txt  05_gear.stag  05_gear.txt  06_magnifier.stag  06_magnifier.txt  07_bell.stag  07_bell.txt  08_user.stag  08_user.txt
samples/mechanical/: 01_interlocking_gears.stag
samples/nature_scenes/: 01_sunset.stag  01_sunset.txt  02_mountain.stag  02_mountain.txt  03_ocean.stag  03_ocean.txt  04_garden.stag  04_garden.txt
scripts/: rate_samples.sh  render_samples.sh
tests/: test_smoke.py
(+52 files in other folders)
