[project]
name = "stagscribe"
version = "0.1.0"
description = "A human-readable language for SVG design — .stag files compile to SVG and render to PNG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Michael"},
]
dependencies = [
    "lark>=1.3,<2",
    "click>=8.1,<9",
    "resvg-py>=0.2,<1",
]

[project.scripts]
stagscribe = "stagscribe.cli.main:cli"

[tool.poetry]
packages = [{include = "stagscribe", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<9"
ruff = ">=0.4"
mypy = ">=1.10"
pytest-cov = ">=5,<6"

[tool.ruff]
src = ["src", "tests"]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["stagscribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
